--- a/src/main/resources/templates/customer/edit.html
+++ b/src/main/resources/templates/customer/edit.html
@@ -118,7 +118,7 @@
         // 监听提交
         form.on('submit(add)', function (data) {
             Common.ajaxFormSubmit('/customer/insert', data.field, function (data) {
-                layer.msg(data.msg, {icon: 6}, function () {
+                layer.msg(data.msg, {icon: 6, time: 100}, function () {
                     Common.closeFrame();
                 });
             });
