--- a/src/main/resources/templates/permission/user/edit.html
+++ b/src/main/resources/templates/permission/user/edit.html
@@ -49,7 +49,7 @@
         // 监听提交
         form.on('submit(add)', function (data) {
             Common.ajaxFormSubmit('/user/add', data.field, function (data) {
-                layer.msg(data.msg, {icon: 6}, function () {
+                layer.msg(data.msg, {icon: 6, time: 10}, function () {
                     Common.closeFrame();
                 });
             });
