--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -48,20 +48,20 @@
                         <dd><a href="javascript:;" lay-id="memu_1" text="客户信息"
                                data-url="/customer/customerpage">客户信息</a>
                         </dd>
-                        <dd><a>意向客户</a></dd>
-                        <dd><a href="javascript:;">签单客户</a></dd>
-                        <dd><a href="javascript:;">公海客户</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_2">意向客户</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_3">签单客户</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_4">公海客户</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">订单管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">订单信息</a></dd>
-                        <dd><a href="javascript:;">订单制作</a></dd>
-                        <dd><a href="javascript:;">订单备案</a></dd>
-                        <dd><a href="javascript:;">到期订单</a></dd>
-                        <dd><a href="javascript:;">新增订单</a></dd>
-                        <dd><a href="javascript:;">售后服务</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_5">订单信息</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_6">订单制作</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_7">订单备案</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_8">到期订单</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_9">新增订单</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_10">售后服务</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -115,11 +115,10 @@
             var url = (elem.context.firstChild.dataset)["url"];
             var id = $(elem.context.firstChild).attr("lay-id");
             element.tabDelete('mainTab', id);
-            if (url == null || id == null) {
+            if (url == null) {
                 element.tabAdd('mainTab', {
                     title: elem.text(),
-                    // content: 'tips/prompt.html',
-                    content: '<iframe src="../tips/prompt.html" width="100%" height= "' + height + 'px" style="border: none" name="mainFrame"></iframe>',
+                    content: '<iframe src="../tips/prompt.html" width="100%" height= "' + height + 'px" style="border: none" name="mainFrame" id="' + id + '"></iframe>',
                     id: id
                 });
             } else {
