--- a/src/main/resources/templates/customer/update.html
+++ b/src/main/resources/templates/customer/update.html
@@ -10,106 +10,102 @@
 </head>
 <body class="form-body">
 <form class="layui-form ">
-    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">客户ID</label>
-        <div class="layui-input-inline">
-            <input type="text" name="customerId" lay-verify="required|number" lay-verType="tips" readonly="true"
-                   th:value="${customerDetail.customerId}" autocomplete="off" class="layui-input">
-        </div>
-    </div>
+    <input type="hidden" name="customerId" lay-verify="required|number" lay-verType="tips"
+           th:value="${customerDetail.customerId}" autocomplete="off" class="layui-input">
     <div class="layui-form-item layui-col-md6 layui-col-md-offset2">
-        <label class="layui-form-label">客户名称</label>
+        <label class="layui-form-label">企业名称</label>
         <div class="layui-input-inline form-length350">
-            <input type="text" name="name" lay-verify="required" readonly="true"
-                   th:value="${customerDetail.name}" autocomplete="off" class="layui-input">
+            <input type="text" name="corpName" lay-verify="required"
+                   th:value="${customerDetail.corpName}" autocomplete="off" class="layui-input">
         </div>
-        <div class="layui-form-mid layui-word-aux">*6-12个字符</div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">客户编号</label>
+        <label class="layui-form-label">法人</label>
         <div class="layui-input-inline">
-            <input type="text" name="number" lay-verify="required|number" lay-verType="tips" readonly="true"
-                   th:value="${customerDetail.number}" autocomplete="off" class="layui-input">
+            <input type="text" name="legalPerson" lay-verify="required" lay-verType="tips"
+                   th:value="${customerDetail.legalPerson}" autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
         <label class="layui-form-label">联系电话</label>
         <div class="layui-input-inline">
-            <input type="text" name="phone" lay-verify="required|phone" th:value="${customerDetail.phone}"
-                   readonly="true"
+            <input type="text" name="corpTel" lay-verify="required" th:value="${customerDetail.corpTel}"
                    autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">公司电话</label>
+        <label class="layui-form-label">其他联系人</label>
         <div class="layui-input-inline">
-            <input type="text" name="corpTel" lay-verify="required|number" th:value="${customerDetail.corpTel}"
-                   readonly="true"
+            <input type="text" name="otherLinkman"
+                   th:value="${customerDetail.otherLinkman}"
                    autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">邮箱</label>
+        <label class="layui-form-label">其他联系人电话</label>
         <div class="layui-input-inline">
-            <input type="text" name="mail" lay-verify="required" th:value="${customerDetail.mail}" readonly="true"
+            <input type="text" name="linkmanPhone" th:value="${customerDetail.linkmanPhone}"
                    autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">通讯地址</label>
+        <label class="layui-form-label">地址</label>
         <div class="layui-input-inline">
-            <input type="text" name="address" lay-verify="required" th:value="${customerDetail.address}" readonly="true"
+            <input type="text" name="address" th:value="${customerDetail.address}"
                    autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">客户类型</label>
+        <label class="layui-form-label">注册时间</label>
         <div class="layui-input-inline">
-            <select name="type" lay-verify="required">
+            <input type="text" name="registrationTime"
+                   th:value="${customerDetail.registrationTime}"
+                   autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
+        <label class="layui-form-label">注册资金</label>
+        <div class="layui-input-inline">
+            <input type="text" name="registrationCapital"
+                   th:value="${customerDetail.registrationCapital}"
+                   autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
+        <label class="layui-form-label">网址</label>
+        <div class="layui-input-inline">
+            <input type="text" name="webUrl" lay-verify="required" th:value="${customerDetail.webUrl}"
+                   autocomplete="off" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
+        <label class="layui-form-label">客户状态</label>
+        <div class="layui-input-inline">
+            <select name="customerStatus" id="customerStatus">
                 <option value="">请选择</option>
                 <option value="0">意向客户</option>
-                <option value="1">签单客户</option>
+                <option value="1">重点客户</option>
                 <option value="2">公海客户</option>
+                <option value="3">合作客户</option>
+                <option value="4">保护客户</option>
             </select>
         </div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">客户级别</label>
-        <div class="layui-input-inline">
-            <input type="text" name="corpGrade" lay-verify="required" th:value="${customerDetail.corpGrade}"
-                   readonly="true"
-                   autocomplete="off" class="layui-input">
-        </div>
-    </div>
-
-    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">联系人</label>
-        <div class="layui-input-inline">
-            <input type="text" name="linkman" lay-verify="required" th:value="${customerDetail.linkman}" readonly="true"
-                   autocomplete="off" class="layui-input">
-        </div>
-    </div>
-
-    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
         <label class="layui-form-label">回访日期</label>
-        <div class="layui-inline"> <!-- 注意：这一层元素并不是必须的 -->
+        <div class="layui-inline">
             <input type="text" class="layui-input" name="visitDate" id="visitDate"
                    th:value="${customerDetail.visitDate}">
         </div>
     </div>
+    <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
+        <label class="layui-form-label">备注</label>
+        <div class="layui-input-inline">
+            <textarea name="remarks" placeholder="请输入内容" class="layui-textarea"
+                      th:text="${customerDetail.remarks}"> </textarea>
+        </div>
+    </div>
 
-
-    <!--  <div class="layui-form-item">
-          <div class="layui-col-md4 layui-col-md-offset2">
-              <label class="layui-form-label">头像</label>
-              <div class="layui-input-inline">
-                  <button type="button" class="layui-btn" id="test1">
-                      <i class="layui-icon">&#xe67c;</i>上传图片
-                  </button>
-                  <input type="hidden" id="photo" name="photo" value="">
-              </div>
-          </div>
-      </div>-->
     <div class="layui-form-item layui-col-md-offset5">
         <div class="layui-input-block">
             <button class="layui-btn" lay-submit="" lay-filter="update" type="button">立即更新</button>
@@ -128,8 +124,9 @@
 
         // 监听提交
         form.on('submit(update)', function (data) {
+            console.log(data);
             Common.ajaxFormSubmit('/customer/update', data.field, function (data) {
-                layer.msg(data.msg, {icon: 6}, function () {
+                layer.msg(data.msg, {icon: 6, time: 100}, function () {
                     Common.closeFrame();
                 });
             });
@@ -146,7 +143,8 @@
             elem: '#visitDate'
         });
 
-        // $("#class option[value='1']").attr('selected', true);
+        // 控制下拉框的值
+        $("#customerStatus option[value=" + [[${customerDetail.customerStatus}]] + "]").prop("selected", true);
 
         form.render();
     });
