--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -93,13 +93,15 @@
     <span>合作客户</span>
     {{#} else if(d.customerStatus==4){}}
     <span>保护客户</span>
-    {{#} else {}}
+    {{#} else if(d.customerStatus == null || d.customerStatus == ''){}}
     <span></span>
+    {{#} else {}}
+    <span>{{d.customerStatus}}</span>
     {{#}}}
 </script>
 
 <script th:inline="javascript">
-    layui.use(['upload', 'table', 'laypage'], function () {
+    layui.use(['upload', 'table'], function () {
         var cols = [[
             {field: 'checkBox', checkbox: true, fixed: true}
             , {field: 'corpName', title: '企业名称'} //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
@@ -112,7 +114,7 @@
             , {field: 'remarks', title: '备注'}
             , {field: 'op', title: '操作', align: 'center', toolbar: '#toolBars'} //这里的toolbar值是模板元素的选择器
         ]];
-        var table = layui.table, $ = layui.jquery, upload = layui.upload, laypage = layui.laypage;
+        var table = layui.table, $ = layui.jquery, upload = layui.upload;
         table.on('tool(userFilter)', function (obj) {
             var data = obj.data; // 获得当前行数据
             var layEvent = obj.event; // 获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
