--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -44,7 +44,11 @@
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button type="button" shiro:hasPermission="sys:user:add" class="layui-btn layui-btn-primary"
+                <!--可控制权限-->
+                <!--<button type="button" shiro:hasPermission="audit" class="layui-btn layui-btn-primary"
+                        id="addBtn"><i class="layui-icon">&#xe654;</i>新增
+                </button>-->
+                <button type="button" class="layui-btn layui-btn-primary"
                         id="addBtn"><i class="layui-icon">&#xe654;</i>新增
                 </button>
                 <button type="button" class="layui-btn layui-btn-primary" id="searchBtn"><i class="layui-icon">
@@ -73,7 +77,7 @@
     <!--<i class="layui-icon">&#xe60a;</i>-->
     <!--</button>-->
 
-    <button shiro:hasPermission="sys:user:edit" class="layui-btn layui-btn-sm" lay-event="edit" th:title="修改">
+    <button shiro:hasPermission="user:audit" class="layui-btn layui-btn-sm" lay-event="edit" th:title="修改">
     <i class="layui-icon">&#xe642;</i>
     </button>
     <button class="layui-btn layui-btn-sm" lay-event="del" th:title="删除">
