角色 权限界面初步添加

--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -69,6 +69,10 @@
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" lay-id="memu_1" text="用户管理"
                                data-url="/user/list.html">用户管理</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_1" text="角色管理"
+                               data-url="/role/list.html">角色管理</a></dd>
+                        <dd><a href="javascript:;" lay-id="memu_1" text="权限管理"
+                               data-url="/permission/list.html">权限管理</a></dd>
                     </dl>
                 </li>
                 <!--<li class="layui-nav-item"><a href="customerpage" target="option">客户管理</a></li>-->
