角色 权限界面初步添加

--- a/src/main/resources/templates/permission/permission/edit.html
+++ b/src/main/resources/templates/permission/permission/edit.html
@@ -11,18 +11,18 @@
 <body class="form-body">
 <form class="layui-form ">
     <div class="layui-form-item layui-col-md6 layui-col-md-offset2">
-        <label class="layui-form-label">角色名称</label>
+        <label class="layui-form-label">权限名称</label>
         <div class="layui-input-inline form-length350">
             <input type="text" name="roleName" lay-verify="required"
-                   placeholder="请输入角色名称" autocomplete="off" class="layui-input">
+                   placeholder="请输入权限名称" autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid layui-word-aux">*6-12个字符</div>
     </div>
     <div class="layui-form-item layui-col-md4 layui-col-md-offset2">
-        <label class="layui-form-label">角色编号</label>
+        <label class="layui-form-label">权限编号</label>
         <div class="layui-input-inline">
             <input type="text" name="roleCode"  lay-verType="tips"
-                   placeholder="请输入角色编号" autocomplete="off" class="layui-input">
+                   placeholder="请输入权限编号" autocomplete="off" class="layui-input">
         </div>
     </div>
 
