--- a/src/main/resources/templates/permission/user/list.html
+++ b/src/main/resources/templates/permission/user/list.html
@@ -11,7 +11,7 @@
     <form class="layui-form" style="text-align: left" id="searchForm">
 
             <div class="layui-input-block">
-                <button type="button" shiro:hasPermission="sys:user:add" class="layui-btn layui-btn-primary"
+                <button type="button" class="layui-btn layui-btn-primary"
                         id="addBtn"><i class="layui-icon">&#xe654;</i>新增
                 </button>
             </div>
